# agilinator

./: .editorconfig  .gitignore  Dockerfile  build_services.sh  docker-compose.yml
docs/: environment_variables.md  setup.md
infrastructure/cdk/: .gitignore  cdk.json  package-lock.json  package.json  tsconfig.json
infrastructure/cdk/src/lib/: agilinator_stack.ts
infrastructure/cdk/src/lib/infrastructure/: base_method.ts  fn_assets_path.ts  lambda_integration_factory.ts  resource_nested_stack.ts
infrastructure/cdk/src/lib/svr_user/: srv_user.ts
infrastructure/deploy_scripts/: bootstrap.sh  deploy.sh
services/: Cargo.toml
services/srv_user/: Cargo.toml
services/srv_user/db/migrations/: 00000_users.sql
services/srv_user/fn_authenticate_user/: Cargo.toml
services/srv_user/fn_authenticate_user/src/: main.rs
services/srv_user/fn_create_user/: Cargo.toml
services/srv_user/fn_create_user/src/: main.rs
services/srv_user/lib_user_domain/: Cargo.toml
services/srv_user/src/: config.rs  db.rs  main.rs
services/srv_user/src/migrations/: 00000_updated_at.sql
