[package]
name = "srv_user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13"
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "migrate", "chrono" ] }
tokio = { version = "1.0", features = ["fs", "sync", "time", "rt", "macros", "rt-multi-thread"] }
